--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-cache-inmemory": "^1.1.9",
+    "apollo-client": "^2.2.5",
+    "apollo-link": "^1.2.1",
+    "apollo-link-http": "^1.5.3",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
@@ -26,16 +30,21 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
+    "graphql": "^0.13.1",
+    "graphql-tag": "^2.8.0",
     "html-to-react": "^1.3.3",
     "html-to-react-components": "^1.6.3",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "mobx": "^3.6.1",
+    "mobx-react": "^4.4.2",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.2.0",
+    "react-apollo": "^2.0.4",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
     "react-html-parser": "^2.0.2",
@@ -49,8 +58,8 @@
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
-    "start": "node scripts/components.js && node scripts/start.js",
-    "build": "node scripts/components.js && node scripts/build.js",
+    "start": "node scripts/start.js",
+    "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom"
   },
   "jest": {
@@ -93,10 +102,103 @@
     ]
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "parser": "babel-eslint",
+    "parserOptions": {
+      "ecmaVersion": 6,
+      "sourceType": "module",
+      "allowImportExportEverywhere": true
+    },
+    "extends": "airbnb",
+    "env": {
+      "browser": true,
+      "node": true
+    },
+    "rules": {
+      "jsx-a11y/href-no-hash": "off",
+      "jsx-a11y/no-noninteractive-element-interactions": "off",
+      "import/no-named-as-default": "off",
+      "arrow-parens": [
+        "off"
+      ],
+      "compat/compat": "off",
+      "consistent-return": "off",
+      "comma-dangle": "off",
+      "camelcase": "off",
+      "no-debugger": "warn",
+      "max-len": "off",
+      "no-lonely-if": "off",
+      "flowtype-errors/show-errors": "off",
+      "generator-star-spacing": "off",
+      "import/prefer-default-export": "off",
+      "import/extensions": "off",
+      "import/no-unresolved": "off",
+      "import/no-extraneous-dependencies": "off",
+      "promise/catch-or-return": "off",
+      "no-console": "off",
+      "arrow-body-style": "off",
+      "global-require": "off",
+      "jsx-a11y/click-events-have-key-events": "off",
+      "jsx-a11y/anchor-is-valid": "off",
+      "no-tabs": "off",
+      "no-underscore-dangle": "off",
+      "indent": "off",
+      "no-bitwise": "off",
+      "no-use-before-define": "off",
+      "no-unneeded-ternary": "off",
+      "linebreak-style": "off",
+      "no-multi-assign": "off",
+      "no-multi-spaces": "off",
+      "promise/param-names": "error",
+      "promise/always-return": "off",
+      "promise/no-native": "off",
+      "react/no-array-index-key": "off",
+      "react/sort-comp": [
+        "error",
+        {
+          "order": [
+            "type-annotations",
+            "static-methods",
+            "lifecycle",
+            "everything-else",
+            "render"
+          ]
+        }
+      ],
+      "react/jsx-closing-bracket-location": "off",
+      "react/jsx-no-bind": "off",
+      "react/jsx-indent": "off",
+      "react/no-danger": "off",
+      "react/jsx-wrap-multilines": "off",
+      "react/no-multi-comp": "off",
+      "react/forbid-prop-types": "off",
+      "react/jsx-closing-tag-location": "off",
+      "react/jsx-indent-props": "off",
+      "react/jsx-boolean-value": "off",
+      "react/jsx-filename-extension": [
+        "error",
+        {
+          "extensions": [
+            ".js",
+            ".jsx"
+          ]
+        }
+      ],
+      "react/prefer-stateless-function": "off"
+    },
+    "plugins": [
+      "import",
+      "promise",
+      "compat",
+      "graphql",
+      "react"
+    ]
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-compat": "^2.2.0",
+    "eslint-plugin-graphql": "^1.5.0",
+    "eslint-plugin-promise": "^3.6.0",
     "prettydiff": "^99.0.1"
   }
 }
