--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "fs-extra": "3.0.1",
     "graphql": "^0.13.1",
     "graphql-tag": "^2.8.0",
+    "history": "^4.7.2",
     "html-to-react": "^1.3.3",
     "html-to-react-components": "^1.6.3",
     "html-webpack-plugin": "2.29.0",
@@ -48,6 +49,7 @@
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
     "react-html-parser": "^2.0.2",
+    "react-router-dom": "^4.2.2",
     "reacterminator": "^0.15.1",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
@@ -195,6 +197,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-compat": "^2.2.0",
     "eslint-plugin-graphql": "^1.5.0",
