--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-html-parser": "^2.0.2",
     "react-jss": "^8.3.3",
     "react-router-dom": "^4.2.2",
+    "react-twitter-widgets": "^1.7.1",
     "reacterminator": "^0.15.1",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
