--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,6 @@
 REACT_APP_GRAPHQL_ENDPOINT=http://localhost:5000/graphql
 REACT_APP_DEFAULT_THEME_NAME=origin
+REACT_APP_EXTERNAL_API=http://api.originbeta.net
+
 
 
