--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "raf": "3.4.0",
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
+    "react-burger-menu": "^2.3.0",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
     "react-html-parser": "^2.0.2",
