more admin fixes

--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
 REACT_APP_GRAPHQL_ENDPOINT=http://graphql.originapi.com/graphql
 REACT_APP_DEFAULT_THEME_NAME=origin
-REACT_APP_EXTERNAL_API=http://api.originbeta.net
+REACT_APP_IMAGE_SERVER=http://api.originapi.com
 
 
 
