--- a/package.json
+++ b/package.json
@@ -52,11 +52,15 @@
     "react-burger-menu": "^2.3.0",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
+    "react-dropzone": "^4.2.9",
     "react-html-parser": "^2.0.2",
     "react-jss": "^8.3.3",
+    "react-quill": "^1.2.6",
     "react-router-dom": "^4.2.2",
+    "react-toastify": "^3.4.3",
     "react-twitter-widgets": "^1.7.1",
     "reacterminator": "^0.15.1",
+    "semantic-ui-react": "^0.79.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
