--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "html-to-react-components": "^1.6.3",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "jsonwebtoken": "^8.2.0",
     "mobx": "^3.6.1",
     "mobx-react": "^4.4.2",
     "object-assign": "4.1.1",
