--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-html-parser": "^2.0.2",
     "react-jss": "^8.3.3",
     "react-quill": "^1.2.6",
+    "react-responsive-modal": "^2.0.1",
     "react-router-dom": "^4.2.2",
     "react-toastify": "^3.4.3",
     "react-twitter-widgets": "^1.7.1",
