--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.2.0",
-    "react-alice-carousel": "^1.9.2",
     "react-apollo": "^2.0.4",
     "react-burger-menu": "^2.3.0",
     "react-dev-utils": "^5.0.0",
@@ -58,6 +57,7 @@
     "react-dropzone": "^4.2.9",
     "react-html-parser": "^2.0.2",
     "react-jss": "^8.3.3",
+    "react-leaf-carousel": "^1.1.1",
     "react-quill": "^1.2.6",
     "react-responsive-modal": "^2.0.1",
     "react-router-dom": "^4.2.2",
