--- a/package.json
+++ b/package.json
@@ -61,10 +61,12 @@
     "react-quill": "^1.2.6",
     "react-responsive-modal": "^2.0.1",
     "react-router-dom": "^4.2.2",
+    "react-slick": "^0.22.3",
     "react-toastify": "^3.4.3",
     "react-twitter-widgets": "^1.7.1",
     "reacterminator": "^0.15.1",
     "semantic-ui-react": "^0.79.0",
+    "slick-carousel": "^1.8.1",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
