--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-html-parser": "^2.0.2",
     "react-jss": "^8.3.3",
     "react-leaf-carousel": "^1.1.1",
+    "react-loadable": "^5.3.1",
     "react-quill": "^1.2.6",
     "react-responsive-modal": "^2.0.1",
     "react-router-dom": "^4.2.2",
@@ -213,6 +214,8 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-plugin-dynamic-import-node": "^1.2.0",
+    "babel-plugin-dynamic-import-webpack": "^1.0.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-compat": "^2.2.0",
