--- a/package.json
+++ b/package.json
@@ -60,10 +60,12 @@
     "react-jss": "^8.3.3",
     "react-leaf-carousel": "^1.1.1",
     "react-loadable": "^5.3.1",
+    "react-on-images-loaded": "^2.0.7",
     "react-quill": "^1.2.6",
     "react-responsive-modal": "^2.0.1",
     "react-router-dom": "^4.2.2",
     "react-slick": "^0.22.3",
+    "react-spinkit": "^3.0.0",
     "react-toastify": "^3.4.3",
     "react-twitter-widgets": "^1.7.1",
     "reacterminator": "^0.15.1",
