--- a/package.json
+++ b/package.json
@@ -54,8 +54,10 @@
     "react-apollo": "^2.0.4",
     "react-burger-menu": "^2.3.0",
     "react-dev-utils": "^5.0.0",
+    "react-document-title": "^2.0.3",
     "react-dom": "^16.2.0",
     "react-dropzone": "^4.2.9",
+    "react-favicon": "^0.0.14",
     "react-html-parser": "^2.0.2",
     "react-jss": "^8.3.3",
     "react-leaf-carousel": "^1.1.1",
