--- a/package.json
+++ b/package.json
@@ -82,8 +82,9 @@
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "start": "dotenv -e .env.local node scripts/start.js",
     "build": "node scripts/build.js",
+    "build-dev": "dotenv -e .env.development node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom"
   },
   "jest": {
@@ -222,6 +223,7 @@
     "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-dynamic-import-webpack": "^1.0.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "dotenv-cli": "^1.4.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-compat": "^2.2.0",
     "eslint-plugin-graphql": "^1.5.0",
