--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "raf": "3.4.0",
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
+    "react-burger-menu": "^2.4.2",
     "react-dev-utils": "^5.0.0",
     "react-device-detect": "^1.1.2",
     "react-document-title": "^2.0.3",
