--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
-REACT_APP_GRAPHQL_ENDPOINT=http://dev.graphql.originapi.com/graphql
+REACT_APP_GRAPHQL_ENDPOINT=http://graphql.originapi.com/graphql
 REACT_APP_DEFAULT_THEME_NAME=origin
-REACT_APP_API_SERVER=http://dev.api.originapi.com
+REACT_APP_API_SERVER=http://api.originapi.com
 REACT_APP_ENVIRONMENT=development
 REACT_APP_SIGNUP_PROCESS=SIGNUP_FUZZY
 
