--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chalk": "1.1.3",
     "cheerio": "^1.0.0-rc.2",
     "css-loader": "0.28.7",
+    "default-passive-events": "^1.0.10",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "4.10.0",
@@ -67,7 +68,7 @@
     "react-quill": "^1.2.6",
     "react-responsive-modal": "^2.0.1",
     "react-router-dom": "^4.2.2",
-    "react-slick": "^0.22.3",
+    "react-slick": "^0.23.1",
     "react-spinkit": "^3.0.0",
     "react-toastify": "^3.4.3",
     "react-twitter-widgets": "^1.7.1",
