--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "pouchdb": "^6.4.3",
+    "primereact": "^1.5.1",
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.2.0",
