--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-dom": "^16.2.0",
     "react-dropzone": "^4.2.9",
     "react-favicon": "^0.0.14",
+    "react-ga": "^2.5.2",
     "react-html-parser": "^2.0.2",
     "react-jss": "^8.3.3",
     "react-leaf-carousel": "^1.1.1",
