--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "jsonwebtoken": "^8.2.0",
     "mobx": "^3.6.1",
     "mobx-react": "^4.4.2",
+    "npm": "^6.0.1",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
