--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
   },
   "scripts": {
     "start": "dotenv -e .env.local node scripts/start.js",
-    "build": "node scripts/build.js",
+    "build": "node scripts/build.js && cp -a ./html/landing ./build/landing",
     "build-dev": "dotenv -e .env.development node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom"
   },
