--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "reacterminator": "^0.15.1",
     "semantic-ui-react": "^0.79.0",
     "slick-carousel": "^1.8.1",
+    "store": "^2.0.12",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
