--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.4.0",
+    "react-alice-carousel": "^1.10.4",
     "react-apollo": "^2.0.4",
     "react-burger-menu": "^2.4.2",
     "react-dev-utils": "^5.0.0",
@@ -64,7 +65,6 @@
     "react-ga": "^2.5.2",
     "react-html-parser": "^2.0.2",
     "react-jss": "^8.3.3",
-    "react-leaf-carousel": "^1.1.1",
     "react-loadable": "^5.3.1",
     "react-on-images-loaded": "^2.0.7",
     "react-quill": "^1.2.6",
