--- a/package.json
+++ b/package.json
@@ -230,6 +230,7 @@
     "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-dynamic-import-webpack": "^1.0.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "compression-webpack-plugin": "^1.1.7",
     "dotenv-cli": "^1.4.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-compat": "^2.2.0",
