--- a/package.json
+++ b/package.json
@@ -147,6 +147,7 @@
     },
     "rules": {
       "jsx-a11y/href-no-hash": "off",
+      "jsx-a11y/label-has-for": "off",
       "jsx-a11y/no-noninteractive-element-interactions": "off",
       "import/no-named-as-default": "off",
       "arrow-parens": [
