Create sponsors on payment

--- a/.env.production
+++ b/.env.production
@@ -4,6 +4,9 @@ REACT_APP_DEFAULT_BASE_THEME=enigma
 REACT_APP_API_SERVER=https://api.originapi.com
 REACT_APP_ENVIRONMENT=production
 REACT_APP_SIGNUP_PROCESS=SIGNUP_NORMAL
+REACT_APP_STRIPE_PRODUCT_ID=prod_DdGjhkIK64yY3T
+REACT_APP_STRIPE_PLAN_ID=plan_DdGk8Fo0gmJXeB
+
 
 
 
