--- a/.env.development
+++ b/.env.development
@@ -4,6 +4,10 @@ REACT_APP_DEFAULT_BASE_THEME=enigma
 REACT_APP_API_SERVER=http://api.originapi.com
 REACT_APP_ENVIRONMENT=development
 REACT_APP_SIGNUP_PROCESS=SIGNUP_FUZZY
+REACT_APP_STRIPE_PRODUCT_ID=prod_DdGjhkIK64yY3T
+REACT_APP_STRIPE_PLAN_ID=plan_DdGk8Fo0gmJXeB
+
+
 
 
 
