--- a/.env.development
+++ b/.env.development
@@ -6,6 +6,8 @@ REACT_APP_ENVIRONMENT=development
 REACT_APP_SIGNUP_PROCESS=SIGNUP_FUZZY
 REACT_APP_STRIPE_PRODUCT_ID=prod_DdGjhkIK64yY3T
 REACT_APP_STRIPE_PLAN_ID=plan_DdGk8Fo0gmJXeB
+REACT_APP_SLACK_NEW_PRODUCT_WEBHOOK=https://hooks.slack.com/services/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
+
 
 
 
