--- a/.env.production
+++ b/.env.production
@@ -7,7 +7,7 @@ REACT_APP_SIGNUP_PROCESS=SIGNUP_NORMAL
 REACT_APP_STRIPE_PRODUCT_ID=prod_DdGjhkIK64yY3T
 REACT_APP_STRIPE_PLAN_ID=plan_DdGk8Fo0gmJXeB
 REACT_APP_SLACK_NEW_PRODUCT_WEBHOOK=https://hooks.slack.com/services/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
-
+REACT_APP_STRIPE_PK_KEY=pk_live_aSzuaR3xMsywBFqX4CdrgUcQ
 
 
 
