--- a/.env.development
+++ b/.env.development
@@ -8,6 +8,9 @@ REACT_APP_STRIPE_PRODUCT_ID=prod_DdGjhkIK64yY3T
 REACT_APP_STRIPE_PLAN_ID=plan_DdGk8Fo0gmJXeB
 REACT_APP_SLACK_NEW_PRODUCT_WEBHOOK=https://hooks.slack.com/services/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
 REACT_APP_STRIPE_PK_KEY=pk_test_XI2VXHY0lSJmfCy7gedb4zK0
+REACT_APP_SOCIAL_STATS_SERVER=https://stats.originapi.com
+
+
 
 
 
