--- a/.env.production
+++ b/.env.production
@@ -8,6 +8,8 @@ REACT_APP_STRIPE_PRODUCT_ID=prod_DancVf7tI6QJyo
 REACT_APP_STRIPE_PLAN_ID=plan_Danf5yhupmi0ao
 REACT_APP_STRIPE_PK_KEY=pk_live_aSzuaR3xMsywBFqX4CdrgUcQ
 REACT_APP_SLACK_NEW_PRODUCT_WEBHOOK=https://hooks.slack.com/services/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
+REACT_APP_SOCIAL_STATS_SERVER=https://stats.originapi.com
+
 
 
 
