--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-alice-carousel": "^1.10.4",
     "react-apollo": "^2.0.4",
     "react-burger-menu": "^2.4.2",
+    "react-datetime": "^2.16.2",
     "react-dev-utils": "^5.0.0",
     "react-device-detect": "^1.1.2",
     "react-document-title": "^2.0.3",
