--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "file-loader": "1.1.5",
     "formik": "^0.11.11",
     "fs-extra": "3.0.1",
+    "googleapis": "^36.0.0",
     "graphql": "^0.13.1",
     "graphql-tag": "^2.8.0",
     "history": "^4.7.2",
