--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-html-parser": "^2.0.2",
     "react-jss": "^8.3.3",
     "react-loadable": "^5.3.1",
+    "react-loader-spinner": "^2.3.0",
     "react-on-images-loaded": "^2.0.7",
     "react-quill": "^1.2.6",
     "react-responsive-modal": "^2.0.1",
