--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 REACT_APP_GRAPHQL_ENDPOINT=http://graphql.originapi.com/graphql
 REACT_APP_DEFAULT_ORGANISATION_NAME=origin
 REACT_APP_DEFAULT_BASE_THEME=enigma
-REACT_APP_API_SERVER=http://0.0.0.0:8080
+REACT_APP_API_SERVER=https://api.originapi.com
 REACT_APP_ENVIRONMENT=production
 REACT_APP_SIGNUP_PROCESS=SIGNUP_NORMAL
 REACT_APP_STRIPE_PRODUCT_ID=prod_DdGjhkIK64yY3T
