--- a/package.json
+++ b/package.json
@@ -236,6 +236,7 @@
     "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-dynamic-import-webpack": "^1.0.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "compression-webpack-plugin": "^1.1.7",
     "dotenv-cli": "^1.4.0",
     "eslint-config-airbnb": "^16.1.0",
