--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-favicon": "^0.0.14",
     "react-fullstory": "^1.0.3",
     "react-ga": "^2.5.2",
+    "react-gtm-module": "^2.0.2",
     "react-html-parser": "^2.0.2",
     "react-jss": "^8.3.3",
     "react-loadable": "^5.3.1",
