--- a/.env.development
+++ b/.env.development
@@ -3,7 +3,12 @@ REACT_APP_API_SERVER=https://dev.api.originapi.com
 REACT_APP_ENVIRONMENT=development
 REACT_APP_STRIPE_PRODUCT_ID=prod_EJkOPyv1NvwgEI
 REACT_APP_STRIPE_PK_KEY=pk_test_XI2VXHY0lSJmfCy7gedb4zK0
-
+REACT_APP_SIGNUP_PROCESS=SIGNUP_NORMAL
+REACT_APP_SLACK_NEW_PRODUCT_WEBHOOK=https://hooks.slack.com/services/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
+REACT_APP_SOCIAL_STATS_SERVER=https://stats.originapi.com
+REACT_APP_CLOUDINARY_URL_OPTIONS=f_auto,q_auto
+REACT_APP_DEFAULT_ORGANISATION_NAME=origin
+REACT_APP_DEFAULT_BASE_THEME=enigma
 
 
 
