--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ REACT_APP_SOCIAL_STATS_SERVER=https://stats.originapi.com
 REACT_APP_CLOUDINARY_URL_OPTIONS=f_auto,q_auto
 REACT_APP_DEFAULT_ORGANISATION_NAME=origin
 REACT_APP_DEFAULT_BASE_THEME=enigma
+REACT_APP_CLOUDINARY_MAX_UPLOAD_SIZE_MB=10
