--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ REACT_APP_CLOUDINARY_URL_OPTIONS=f_auto,q_auto
 REACT_APP_DEFAULT_ORGANISATION_NAME=origin
 REACT_APP_DEFAULT_BASE_THEME=enigma
 REACT_APP_CLOUDINARY_MAX_UPLOAD_SIZE_MB=10
+REACT_APP_FREE_TRIAL_PERIOD_DAYS=14
+
