--- a/package.json
+++ b/package.json
@@ -165,6 +165,9 @@
       "no-debugger": "warn",
       "max-len": "off",
       "no-lonely-if": "off",
+      "guard-for-in": "off",
+      "no-restricted-syntax" : "off",
+      "function-paren-newline" : "off",
       "flowtype-errors/show-errors": "off",
       "generator-star-spacing": "off",
       "import/prefer-default-export": "off",
