--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jsonwebtoken": "^8.2.0",
     "mobx": "^3.6.1",
     "mobx-react": "^4.4.2",
+    "moment-timezone": "^0.5.23",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -166,13 +167,14 @@
       "max-len": "off",
       "no-lonely-if": "off",
       "guard-for-in": "off",
-      "no-restricted-syntax" : "off",
-      "function-paren-newline" : "off",
+      "no-restricted-syntax": "off",
+      "function-paren-newline": "off",
       "flowtype-errors/show-errors": "off",
       "generator-star-spacing": "off",
       "import/prefer-default-export": "off",
       "import/extensions": "off",
       "import/no-unresolved": "off",
+      "no-restricted-globals": "off",
       "import/no-extraneous-dependencies": "off",
       "promise/catch-or-return": "off",
       "no-console": "off",
