--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 REACT_APP_SIGNUP_PROCESS=SIGNUP_NORMAL
 REACT_APP_SLACK_NEW_PRODUCT_WEBHOOK=https://hooks.slack.com/services/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
+REACT_APP_SLACK_NEW_SIGNUP_WEBHOOK=https://hooks.slack.com/services/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
 REACT_APP_SOCIAL_STATS_SERVER=https://stats.originapi.com
 REACT_APP_CLOUDINARY_URL_OPTIONS=f_auto,q_auto
 REACT_APP_DEFAULT_ORGANISATION_NAME=origin
