Fix for picking correct plan

--- a/.env.production
+++ b/.env.production
@@ -3,6 +3,7 @@ REACT_APP_API_SERVER=https://api.originapi.com
 REACT_APP_ENVIRONMENT=production
 REACT_APP_STRIPE_PRODUCT_ID=prod_EGvmaD01k4DiH6
 REACT_APP_STRIPE_PK_KEY=pk_live_aSzuaR3xMsywBFqX4CdrgUcQ
+REACT_APP_STRIPE_DEFAULT_SIGNUP_PLAN=plan_EGvoyYtU7qDjPf
 GENERATE_SOURCEMAP=false
 
 
