--- a/.env.local
+++ b/.env.local
@@ -3,3 +3,4 @@ REACT_APP_API_SERVER=https://dev.api.originapi.com
 REACT_APP_ENVIRONMENT=local
 REACT_APP_STRIPE_PRODUCT_ID=prod_EJkOPyv1NvwgEI
 REACT_APP_STRIPE_PK_KEY=pk_test_XI2VXHY0lSJmfCy7gedb4zK0
+REACT_APP_STRIPE_DEFAULT_SIGNUP_PLAN=plan_EJkPxDdSWQdqkr
