--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chalk": "1.1.3",
     "cheerio": "^1.0.0-rc.2",
     "css-loader": "0.28.7",
+    "dayjs": "^1.8.8",
     "default-passive-events": "^1.0.10",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
@@ -46,7 +47,6 @@
     "jsonwebtoken": "^8.2.0",
     "mobx": "^3.6.1",
     "mobx-react": "^4.4.2",
-    "moment-timezone": "^0.5.23",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -54,7 +54,7 @@
     "primereact": "^1.5.1",
     "promise": "8.0.1",
     "raf": "3.4.0",
-    "react": "^16.4.0",
+    "react": "^16.8.3",
     "react-alice-carousel": "^1.10.4",
     "react-apollo": "^2.0.4",
     "react-burger-menu": "^2.4.2",
@@ -62,7 +62,7 @@
     "react-dev-utils": "^5.0.0",
     "react-device-detect": "^1.1.2",
     "react-document-title": "^2.0.3",
-    "react-dom": "^16.4.0",
+    "react-dom": "^16.8.3",
     "react-dropzone": "^4.2.9",
     "react-favicon": "^0.0.14",
     "react-fullstory": "^1.0.3",
