--- a/package.json
+++ b/package.json
@@ -142,8 +142,18 @@
       [
         "import",
         {
-          "libraryName": "antd",
-          "style": "css"
+          "libraryName": "antd"
+        }
+      ],
+      [
+        "transform-semantic-ui-react-imports",
+        {
+          "convertMemberImports": true,
+          "importType": "es",
+          "addCssImports": false,
+          "importMinifiedCssFiles": false,
+          "addLessImports": false,
+          "addDuplicateStyleImports": false
         }
       ]
     ]
@@ -253,6 +263,7 @@
     "babel-plugin-import": "^1.11.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-remove-console": "^6.9.4",
+    "babel-plugin-transform-semantic-ui-react-imports": "^1.4.1",
     "compression-webpack-plugin": "^1.1.7",
     "dotenv-cli": "^1.4.0",
     "eslint-config-airbnb": "^16.1.0",
