--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "react-toastify": "^3.4.3",
     "react-twitter-widgets": "^1.7.1",
     "reacterminator": "^0.15.1",
+    "rsuite": "^3.8.2",
     "semantic-ui-react": "^0.79.0",
     "slick-carousel": "^1.8.1",
     "store": "^2.0.12",
@@ -192,6 +193,7 @@
       "generator-star-spacing": "off",
       "import/prefer-default-export": "off",
       "import/extensions": "off",
+      "react/no-unknown-property": "off",
       "import/no-unresolved": "off",
       "no-restricted-globals": "off",
       "import/no-extraneous-dependencies": "off",
