--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "jsonwebtoken": "^8.2.0",
+    "logrocket": "^0.6.20",
     "mobx": "^3.6.1",
     "mobx-react": "^4.4.2",
     "object-assign": "4.1.1",
@@ -64,6 +65,7 @@
     "react-device-detect": "^1.1.2",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.8.3",
+    "react-driftjs": "^1.1.6",
     "react-dropzone": "^4.2.9",
     "react-favicon": "^0.0.14",
     "react-fullstory": "^1.0.3",
