--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "primereact": "^1.5.1",
     "promise": "8.0.1",
     "raf": "3.4.0",
-    "react": "^16.8.3",
+    "react": "^16.8.6",
     "react-alice-carousel": "^1.10.4",
     "react-apollo": "^2.0.4",
     "react-burger-menu": "^2.4.2",
@@ -82,6 +82,7 @@
     "react-spinkit": "^3.0.0",
     "react-stripe-elements": "^2.0.1",
     "react-svg-spinner": "^1.0.1",
+    "react-swipe": "^6.0.4",
     "react-toastify": "^3.4.3",
     "react-twitter-widgets": "^1.7.1",
     "reacterminator": "^0.15.1",
@@ -91,6 +92,7 @@
     "store": "^2.0.12",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
+    "swipe-js-iso": "^2.1.5",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
