--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "react-responsive-modal": "^2.0.1",
     "react-router-dom": "^4.2.2",
     "react-slick": "^0.23.1",
+    "react-smooth-dnd": "^0.11.0",
     "react-spinkit": "^3.0.0",
     "react-stripe-elements": "^2.0.1",
     "react-svg-spinner": "^1.0.1",
