--- a/package.json
+++ b/package.json
@@ -210,6 +210,7 @@
       "global-require": "off",
       "jsx-a11y/click-events-have-key-events": "off",
       "jsx-a11y/anchor-is-valid": "off",
+      "no-await-in-loop": "off",
       "no-tabs": "off",
       "no-underscore-dangle": "off",
       "indent": "off",
