--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "default-passive-events": "^1.0.10",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
+    "draftjs-to-html": "^0.8.4",
     "eslint": "4.10.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
@@ -66,6 +67,7 @@
     "react-device-detect": "^1.1.2",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.8.3",
+    "react-draft-wysiwyg": "^1.13.2",
     "react-driftjs": "^1.1.6",
     "react-dropzone": "^4.2.9",
     "react-favicon": "^0.0.14",
@@ -76,7 +78,6 @@
     "react-jss": "^8.3.3",
     "react-loader-spinner": "^2.3.0",
     "react-on-images-loaded": "^2.0.7",
-    "react-quill": "^1.2.6",
     "react-responsive-modal": "^2.0.1",
     "react-router-dom": "^4.2.2",
     "react-slick": "^0.23.1",
