--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
 REACT_APP_GRAPHQL_ENDPOINT=https://dev.graphql.originapi.com/graphql
-REACT_APP_API_SERVER=https://dev.api.originapi.com
+REACT_APP_API_SERVER=http://0.0.0.0:80
 REACT_APP_ENVIRONMENT=local
 REACT_APP_STRIPE_PRODUCT_ID=prod_EJkOPyv1NvwgEI
 REACT_APP_STRIPE_PK_KEY=pk_test_XI2VXHY0lSJmfCy7gedb4zK0
