changed env stuff after deleting stripe plans

--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,7 @@
 REACT_APP_GRAPHQL_ENDPOINT=https://dev.graphql.originapi.com/graphql
-REACT_APP_API_SERVER=http://127.0.0.1:5000
+REACT_APP_API_SERVER=http://localhost:5000
 REACT_APP_ENVIRONMENT=local
 REACT_APP_STRIPE_PRODUCT_ID=prod_EJkOPyv1NvwgEI
 REACT_APP_STRIPE_PK_KEY=pk_test_XI2VXHY0lSJmfCy7gedb4zK0
-REACT_APP_STRIPE_DEFAULT_SIGNUP_PLAN=plan_EJkPxDdSWQdqkr
+REACT_APP_STRIPE_DEFAULT_SIGNUP_PLAN=plan_EGvoyYtU7qDjPf
+
